--- a/EasyMoney/app/src/main/res/layout/activity_add_savings.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_add_savings.xml
@@ -33,55 +33,18 @@
         app:layout_constraintStart_toEndOf="@+id/addSavingsBackbtn"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/addSavingsCat"
-        android:layout_width="382dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="67dp"
-        android:layout_marginEnd="16dp"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addSavingsBackbtn" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/SavingsDate"
-        android:layout_width="380dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="16dp"
-        android:hint="@string/addDate"
-        android:inputType="textPersonName"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addSavingsCat"
-        tools:boxCornerRadiusTopEnd="5dp"
-        tools:boxCornerRadiusTopStart="5dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputSavingsDate"
-            style="@style/txtSub"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/Savingsammount"
         android:layout_width="380dp"
         android:layout_height="56dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="15dp"
-        android:hint="@string/addAmmount"
-        android:inputType="textPersonName"
+        android:hint="@string/addAmount"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SavingsDate"
+        app:layout_constraintTop_toBottomOf="@id/addSavingsHead"
         tools:boxCornerRadiusTopEnd="5dp"
         tools:boxCornerRadiusTopStart="5dp">
 
@@ -89,43 +52,73 @@
             android:id="@+id/SavingsammountInput"
             style="@style/txtSub"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/Savingsname"
-        android:layout_width="380dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="15dp"
-        android:hint="@string/addName"
-        android:inputType="textPersonName"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Savingsammount"
-        tools:boxCornerRadiusTopEnd="5dp"
-        tools:boxCornerRadiusTopStart="5dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/SavingsnameInput"
-            style="@style/txtSub"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
+    <!--Footer Buttons -->
 
     <Button
         android:id="@+id/addSavingsbtn"
         android:layout_width="380dp"
         android:layout_height="60dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="106dp"
         android:text="@string/trackerAddSavings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Savingsname" />
+        app:layout_constraintTop_toBottomOf="@id/Savingsammount"
+        app:layout_constraintVertical_bias="0.116" />
+
+    <Button
+        android:id="@+id/userTrackerFoot"
+        android:layout_width="108dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_userinactive"
+        app:iconGravity="top"
+        app:iconTint="#676767"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bETrackerFoot" />
+
+    <Button
+        android:id="@+id/bETrackerFoot"
+        android:layout_width="102dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_bigexpenseinactive"
+        app:iconGravity="top"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/reportTrackerFoot"
+        app:iconTint="#676767" />
+
+    <Button
+        android:id="@+id/reportTrackerFoot"
+        android:layout_width="102dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#FFFFFF"
+        android:gravity="center"
+        app:icon="@drawable/ic_reportincactive"
+        app:iconGravity="top"
+        app:iconTint="#676767"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/trackerTrackerFoot" />
+
+    <Button
+        android:id="@+id/trackerTrackerFoot"
+        android:layout_width="102dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_trackerinactive"
+        app:iconGravity="top"
+        app:iconTint="#676767"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
