--- a/EasyMoney/app/src/main/res/drawable/style_btn_stoke.xml
+++ b/EasyMoney/app/src/main/res/drawable/style_btn_stoke.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<!--    background color-->
     <solid android:color="#00FFFFFF"/>
 
     <stroke
         android:width="1dp"
-        android:color="#FFFFFF"/>
+        android:color="@color/black" />
+
     <corners
-        android:radius="5dp"/>
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp"
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp"  />
 
     <size android:height="60dp" />
 
