--- a/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
@@ -7,59 +7,6 @@
     tools:context=".ExpenseTracker"
     android:background="#9E9E9E">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cardView5"
-        android:layout_width="181dp"
-        android:layout_height="135dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:background="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cardView6"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
-
-        <Button
-            android:id="@+id/trackerAddSavingsbtn"
-            android:layout_width="164dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="9dp"
-            android:layout_marginBottom="13dp"
-            android:background="#00FFFFFF"
-            android:text="@string/trackerAddSavings"
-            android:textColor="#676767"
-            app:icon="@drawable/ic_iconadd"
-            app:iconTint="#676767"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerSavingsTotaltxt" />
-
-        <TextView
-            android:id="@+id/trackerSavingsHead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/trackerSavingsHead"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/trackerSavingsTotaltxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
-            android:layout_marginEnd="28dp"
-            android:text="$0.00"
-            android:textColor="#000000"
-            android:textSize="28sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerSavingsHead" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <Button
         android:id="@+id/userTrackerFoot"
         android:layout_width="108dp"
@@ -78,9 +25,10 @@
         android:backgroundTint="#FFFFFF"
         app:icon="@drawable/ic_bigexpenseinactive"
         app:iconGravity="top"
+        app:iconTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/reportTrackerFoot"
-        app:iconTint="#676767" />
+        tools:iconTint="#676767" />
 
     <Button
         android:id="@+id/reportTrackerFoot"
@@ -117,306 +65,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/calendarTrackerBtn"
+        android:id="@+id/helpTrackerBtn"
         android:layout_width="52dp"
         android:layout_height="44dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#00FFFFFF"
-        app:icon="@drawable/ic_btncalendar"
+        app:icon="@drawable/ic_help"
         app:iconTint="#676767"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:iconGravity="top" />
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cardView"
-        android:layout_width="384dp"
-        android:layout_height="84dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="14dp"
-        android:background="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trackerHeader">
-
-        <TextView
-            android:id="@+id/trackerDAHead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="13dp"
-            android:text="@string/trackerDAHead"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_conversion_absoluteHeight="19dp"
-            tools:layout_conversion_absoluteWidth="58dp" />
-
-        <TextView
-            android:id="@+id/DATotaltxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            android:layout_marginEnd="25dp"
-            android:text="$0.00"
-            android:textColor="#000000"
-            android:textSize="36sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ProgressBar
-            android:id="@+id/DASpentProgress"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="346dp"
-            android:layout_height="14dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="9dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/DATotaltxt" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cardView6"
-        android:layout_width="181dp"
-        android:layout_height="135dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="8dp"
-        android:background="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
-
-        <Button
-            android:id="@+id/trackerAddIncomeBtn"
-            android:layout_width="179dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginBottom="13dp"
-            android:background="#00FFFFFF"
-            android:text="@string/trackerAddIncome"
-            android:textColor="#676767"
-            app:icon="@drawable/ic_iconadd"
-            app:iconTint="#676767"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerIncomeTotaltxt" />
-
-        <TextView
-            android:id="@+id/trackerIncomeHead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/trackerIncomeHeader"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/trackerIncomeTotaltxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="28dp"
-            android:text="$0.00"
-            android:textColor="#000000"
-            android:textSize="28sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerIncomeHead" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Button
-        android:id="@+id/trackerAddExpenseBtn"
-        android:layout_width="382dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="13dp"
-        android:text="@string/trackerAddExpense"
-        app:icon="@drawable/ic_iconadd"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView5" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cardView7"
-        android:layout_width="385dp"
-        android:layout_height="209dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="4dp"
-        android:background="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/userTrackerFoot"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trackerAddExpenseBtn">
-
-        <ImageView
-            android:id="@+id/trackerIcon4"
-            android:layout_width="37dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerIcon3" />
-
-        <ImageView
-            android:id="@+id/trackerIcon3"
-            android:layout_width="37dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerIcon2" />
-
-        <ImageView
-            android:id="@+id/trackerIcon2"
-            android:layout_width="37dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerIcon1" />
-
-        <TextView
-            android:id="@+id/trackerExpenseDate2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="26dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseDate1" />
-
-        <TextView
-            android:id="@+id/trackerExpenseName1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            app:layout_constraintStart_toEndOf="@+id/trackerIcon1"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseHead" />
-
-        <TextView
-            android:id="@+id/trackerExpensePrice1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="39dp"
-            android:layout_marginEnd="43dp"
-            android:text="N/A"
-            app:layout_constraintEnd_toStartOf="@+id/trackerExpenseDate1"
-            app:layout_constraintStart_toEndOf="@+id/trackerExpenseName1"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/trackerExpenseDate1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="39dp"
-            android:layout_marginEnd="16dp"
-            android:text="N/A"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/trackerExpenseName2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="26dp"
-            app:layout_constraintStart_toEndOf="@+id/trackerIcon2"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseName1" />
-
-        <TextView
-            android:id="@+id/trackerExpenseName3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
-            app:layout_constraintStart_toEndOf="@+id/trackerIcon3"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseName2" />
-
-        <TextView
-            android:id="@+id/trackerExpensePrice3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="22dp"
-            android:layout_marginEnd="43dp"
-            app:layout_constraintEnd_toStartOf="@+id/trackerExpenseDate3"
-            app:layout_constraintStart_toEndOf="@+id/trackerExpenseName3"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice2" />
-
-        <TextView
-            android:id="@+id/trackerExpenseDate3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseDate2" />
-
-        <TextView
-            android:id="@+id/trackerExpenseDate4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="23dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseDate3" />
-
-        <TextView
-            android:id="@+id/trackerExpensePrice4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="23dp"
-            android:layout_marginEnd="43dp"
-            app:layout_constraintEnd_toStartOf="@+id/trackerExpenseDate4"
-            app:layout_constraintStart_toEndOf="@+id/trackerExpenseName4"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice3" />
-
-        <TextView
-            android:id="@+id/trackerExpenseName4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
-            app:layout_constraintStart_toEndOf="@+id/trackerIcon4"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseName3" />
-
-        <TextView
-            android:id="@+id/trackerExpensePrice2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="26dp"
-            android:layout_marginEnd="43dp"
-            app:layout_constraintEnd_toStartOf="@+id/trackerExpenseDate2"
-            app:layout_constraintStart_toEndOf="@+id/trackerExpenseName2"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice1" />
-
-        <TextView
-            android:id="@+id/trackerExpenseHead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="5dp"
-            android:text="@string/trackerExpenseHead"
-            android:textColor="#000000"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/trackerIcon1"
-            android:layout_width="37dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseHead"
-            app:srcCompat="@drawable/ic_other" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="95dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
