--- a/EasyMoney/app/src/main/res/values/styles.xml
+++ b/EasyMoney/app/src/main/res/values/styles.xml
@@ -44,6 +44,30 @@
         <item name="android:textColor">@color/gray4</item>
     </style>
 
+    <style name="txtMainpagesubTitle">
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">@font/lato_light</item>
+        <item name="android:textColor">@color/gray1</item>
+    </style>
+
+    <style name="txtMainpageBtn">
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="txtMainpageSubBtn">
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+        <item name="android:textColor">@color/gray3</item>
+    </style>
+
+    <style name="txtMainpageBigNumber">
+        <item name="android:fontFamily">@font/lato_bold</item>
+        <item name="android:textColor">@color/black</item>
+
+    </style>
+
     <style name="CircularProgressBarOther">
         <item name="android:indeterminateOnly">false</item>
         <item name="android:progressDrawable">@drawable/circle</item>
